--- a/no.html
+++ b/no.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="love">
-            <h2><b>Chào cậu nhée ! <br>Cậu sẽ lắng nghe tớ nói chứ </b></h2>
+            <h2><b>Chào cậu nhée ! <br>Cậu sẽ lắng nghe tớ nói chứ ?</b></h2>
             <a href="index.html">Không</a>
             <a href="yes.html"><b>Okee Cậu</b></a>
         </div>
